# cmultithreaddemo

./: CMakeLists.txt  README.md
include/: com.h  handleTrd.h  sendMgr.h  sendTrd.h
source/: handleTrd.cpp  main.cpp  sendMgr.cpp  sendTrd.cpp
